# arduinoformat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.properties
TestArduinoFormat/: TestArduinoFormat.cpp  TestArduinoFormat.vcxproj  TestArduinoFormat.vcxproj.filters
src/: CMakeLists.txt  arduinoformat.cpp  arduinoformat.h
test/: CMakeLists.txt  testarduinoformat.cpp  utest.cpp
tests/: CMakeLists.txt
tests/arduino_mock/: CMakeLists.txt
